# calling-agent

./: .gitignore  README.md  deployment_context.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial_auth.py  0002_agents.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: agents.py  api_keys.py  auth.py  calls.py  health.py  organizations.py  users.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py  migrations.py  redis.py  security.py
backend/app/models/: __init__.py  agent.py  api_key.py  base.py  enums.py  organization.py  user.py
backend/app/providers/: __init__.py  base.py
backend/app/providers/llm/: __init__.py  cerebras.py  openrouter.py
backend/app/providers/telephony/: __init__.py  plivo.py
backend/app/repositories/: agent.py  api_key.py  base.py  organization.py  user.py
backend/app/schemas/: agent.py  api_key.py  auth.py  common.py  organization.py  user.py
backend/app/services/: agent_service.py  api_key_service.py  auth_service.py  user_service.py
backend/app/utils/: phone.py
backend/app/voice/: pipeline.py
